--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <img src="assets/images/act.png" class="avatar" />
       <h1 class="h-text">Happy Birthday</h1>
-      <h2 class="h-text">王晗</h2>
+      <h2 class="h-text">王涵</h2>
       <h3 class="h-text">2024.02.06</h3>
 
       <div class="card">
